# soundMagic

./: .gitignore  CMakeLists.txt  README.md
apps/: main.cpp
assets/: readme.md
include/: aboutTab.hpp  customButtons.hpp  mainTab.hpp  sound.hpp
src/sound/: CMakeLists.txt  sound.cpp
src/tabs/: CMakeLists.txt  aboutTab.cpp  mainTab.cpp
src/widgets/: CMakeLists.txt  customButtons.cpp
